--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebBuild.loader.js";
+      var loaderUrl = buildUrl + "/FirstBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebBuild.data.br",
-        frameworkUrl: buildUrl + "/WebBuild.framework.js.br",
-        codeUrl: buildUrl + "/WebBuild.wasm.br",
+        dataUrl: buildUrl + "/FirstBuild.data.gz",
+        frameworkUrl: buildUrl + "/FirstBuild.framework.js.gz",
+        codeUrl: buildUrl + "/FirstBuild.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Birds",
