--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/FirstBuild.loader.js";
+      var loaderUrl = buildUrl + "/BirdGame-WebBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/FirstBuild.data",
-        frameworkUrl: buildUrl + "/FirstBuild.framework.js",
-        codeUrl: buildUrl + "/FirstBuild.wasm",
+        dataUrl: buildUrl + "/BirdGame-WebBuild.data",
+        frameworkUrl: buildUrl + "/BirdGame-WebBuild.framework.js",
+        codeUrl: buildUrl + "/BirdGame-WebBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Birds",
